[gd_scene load_steps=6 format=3 uid="uid://cjtbtu4s7fwm5"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_134nu"]
[ext_resource type="PackedScene" uid="uid://devcpe15bdlk2" path="res://scenes/player.tscn" id="2_ulh1k"]
[ext_resource type="Texture2D" uid="uid://fmr20n8vcyrq" path="res://icon.svg" id="3_mgu7r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bodvo"]
size = Vector2(476, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ay7b6"]
size = Vector2(606, 31)

[node name="Level" type="Node2D"]
script = ExtResource("1_134nu")

[node name="Player" parent="." instance=ExtResource("2_ulh1k")]
position = Vector2(210, 85)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(216, 226)

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
scale = Vector2(3.70312, 0.171875)
texture = ExtResource("3_mgu7r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_bodvo")

[node name="Deadzone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deadzone"]
position = Vector2(242, 337)
shape = SubResource("RectangleShape2D_ay7b6")

[node name="StartPositions" type="Marker2D" parent="."]
position = Vector2(206, 131)

[connection signal="body_entered" from="Deadzone" to="." method="_on_area_2d_body_entered"]
