[gd_scene load_steps=10 format=3 uid="uid://dailyvj6eur1h"]

[ext_resource type="PackedScene" uid="uid://devcpe15bdlk2" path="res://scenes/player.tscn" id="1_8asw5"]
[ext_resource type="Script" path="res://scripts/level.gd" id="1_8tksg"]
[ext_resource type="PackedScene" uid="uid://i4detybtf8tr" path="res://scenes/bg.tscn" id="2_hpfyv"]
[ext_resource type="PackedScene" uid="uid://ij8ag3stkmtq" path="res://scenes/level_3.tscn" id="2_s6ash"]
[ext_resource type="PackedScene" uid="uid://bakoc46i0peyn" path="res://scenes/starting_point.tscn" id="4_633vo"]
[ext_resource type="PackedScene" uid="uid://dublac86y1lhc" path="res://scenes/ui_layer.tscn" id="4_n4d16"]
[ext_resource type="PackedScene" uid="uid://c5tnemgj6vgb0" path="res://scenes/exit.tscn" id="5_vhb4t"]
[ext_resource type="PackedScene" uid="uid://d02dn5my8htvo" path="res://scenes/tile_map.tscn" id="6_kjd6a"]
[ext_resource type="PackedScene" uid="uid://bu1ian7ii3vdn" path="res://scenes/deadzone.tscn" id="6_y5qey"]

[node name="Level_2" type="Node2D"]
script = ExtResource("1_8tksg")
next_level = ExtResource("2_s6ash")
is_final_level = true

[node name="BG" parent="." instance=ExtResource("2_hpfyv")]

[node name="UILayer" parent="." instance=ExtResource("4_n4d16")]

[node name="StartingPoint" parent="." instance=ExtResource("4_633vo")]
position = Vector2(311, 51)

[node name="Exit" parent="." instance=ExtResource("5_vhb4t")]
position = Vector2(635, 65)

[node name="TileMap" parent="." instance=ExtResource("6_kjd6a")]
position = Vector2(456, 226)
layer_0/tile_data = PackedInt32Array(-131078, 458752, 5, -65542, 458752, 6, -131077, 524288, 5, -65541, 524288, 6, -131076, 393216, 5, -65540, 393216, 6, -131063, 458752, 6, -131062, 524288, 6, -131061, 393216, 6, -196630, 393216, 4, -131094, 393216, 5, -65558, 393216, 6, -196629, 458752, 4, -131093, 458752, 5, -65557, 458752, 6, -196628, 524288, 4, -131092, 524288, 5, -65556, 524288, 6, -196627, 393216, 4, -131091, 393216, 5, -65555, 393216, 6, -196626, 458752, 4, -131090, 458752, 5, -65554, 458752, 6, -196625, 524288, 4, -131089, 524288, 5, -65553, 524288, 6, -196624, 393216, 4, -131088, 393216, 5, -65552, 393216, 6, -196623, 458752, 4, -131087, 458752, 5, -65551, 458752, 6, -196622, 524288, 4, -131086, 524288, 5, -65550, 524288, 6, -196621, 393216, 4, -131085, 393216, 5, -65549, 393216, 6, -196620, 458752, 4, -131084, 458752, 5, -65548, 458752, 6, -196619, 524288, 4, -131083, 524288, 5, -65547, 524288, 6, -196618, 393216, 4, -131082, 393216, 5, -65546, 393216, 6, -196617, 458752, 4, -131081, 458752, 5, -65545, 458752, 6, -196616, 524288, 4, -131080, 524288, 5, -65544, 524288, 6, -196615, 393216, 4, -131079, 393216, 5, -65543, 393216, 6, -196614, 458752, 4, -196613, 524288, 4, -196612, 393216, 4, -196611, 458752, 4, -131075, 458752, 5, -65539, 458752, 6, -196610, 524288, 4, -131074, 524288, 5, -65538, 524288, 6, -196609, 393216, 4, -131073, 393216, 5, -65537, 393216, 6, -262144, 458752, 4, -196608, 458752, 5, -131072, 458752, 6, -262143, 524288, 4, -196607, 524288, 5, -131071, 524288, 6, -262142, 393216, 4, -196606, 393216, 5, -131070, 393216, 6, -262141, 458752, 4, -196605, 458752, 5, -131069, 458752, 6, -262140, 524288, 4, -196604, 524288, 5, -131068, 524288, 6, -262139, 393216, 4, -196603, 393216, 5, -131067, 393216, 6, -262138, 458752, 4, -196602, 458752, 5, -131066, 458752, 6, -262137, 524288, 4, -196601, 524288, 5, -131065, 524288, 6, -262136, 393216, 4, -196600, 393216, 5, -131064, 393216, 6, -262135, 458752, 4, -196599, 458752, 5, -262134, 524288, 4, -196598, 524288, 5, -262133, 393216, 4, -196597, 393216, 5, -262132, 458752, 4, -196596, 458752, 5, -131060, 458752, 6, -262131, 524288, 4, -196595, 524288, 5, -131059, 524288, 6, -262130, 393216, 4, -196594, 393216, 5, -131058, 393216, 6, -262129, 458752, 4, -196593, 458752, 5, -131057, 458752, 6, -262128, 524288, 4, -196592, 524288, 5, -131056, 524288, 6, -262127, 393216, 4, -196591, 393216, 5, -131055, 393216, 6, -262126, 458752, 4, -196590, 458752, 5, -131054, 458752, 6, -262125, 524288, 4, -196589, 524288, 5, -131053, 524288, 6, -262124, 393216, 4, -196588, 393216, 5, -131052, 393216, 6, -262123, 458752, 4, -196587, 458752, 5, -131051, 458752, 6, -262122, 524288, 4, -196586, 524288, 5, -131050, 524288, 6, -262121, 393216, 4, -196585, 393216, 5, -131049, 393216, 6, -262120, 458752, 4, -196584, 458752, 5, -131048, 458752, 6, -262119, 524288, 4, -196583, 524288, 5, -131047, 524288, 6, -262118, 393216, 4, -196582, 393216, 5, -131046, 393216, 6, -262117, 393216, 4, -196581, 458752, 5, -131045, 458752, 6, -262116, 458752, 4, -196580, 524288, 5, -131044, 524288, 6, -524278, 393216, 4, -524277, 458752, 4, -524276, 524288, 4, -524275, 393216, 4, -524274, 458752, 4, -524273, 524288, 4, -524272, 393216, 4, -524271, 458752, 4, -524270, 524288, 4, -524269, 393216, 4, -524268, 458752, 4, -524267, 524288, 4, -524299, 393216, 4, -524298, 458752, 4, -524297, 524288, 4, -524296, 393216, 4, -524295, 458752, 4, -524294, 524288, 4, -524293, 393216, 4, -524292, 458752, 4, -524291, 524288, 4, -524290, 393216, 4, -524289, 458752, 4, -589824, 524288, 4, -589823, 393216, 4, -589822, 458752, 4, -589821, 524288, 4, -589820, 393216, 4)

[node name="Deadzone" parent="." instance=ExtResource("6_y5qey")]
position = Vector2(135, -4)

[node name="Player" parent="." instance=ExtResource("1_8asw5")]
position = Vector2(217, 28)
